--- a/ao3k-lowfs3k-conf/fpssetup.setval.conf
+++ b/ao3k-lowfs3k-conf/fpssetup.setval.conf
@@ -9,11 +9,16 @@ setval mlat-LOOPNUMBER.procinfo.cset aolrt
 setval acquWFS-LOOPNUMBER.procinfo.RTprio 49
 setval acquWFS-LOOPNUMBER.procinfo.cset aolrt
 setval acquWFS-LOOPNUMBER.procinfo.loopcntMax -1
-setval acquWFS-LOOPNUMBER.WFSnormfloor 1.0
+setval acquWFS-LOOPNUMBER.WFSnormfloor 0.01
+setval acquWFS-LOOPNUMBER.comp.darksub OFF
+setval acquWFS-LOOPNUMBER.comp.WFSnormalize OFF
+setval acquWFS-LOOPNUMBER.comp.compWFSmask OFF
+setval acquWFS-LOOPNUMBER.comp.WFSsigav OFF
 
 setval wfs2cmodeval-LOOPNUMBER.procinfo.RTprio 48
 setval wfs2cmodeval-LOOPNUMBER.procinfo.cset aolrt
 setval wfs2cmodeval-LOOPNUMBER.GPUindex 99
+setval wfs2cmodeval-LOOPNUMBER.option.MODENORM OFF
 
 setval mfilt-LOOPNUMBER.procinfo.RTprio 48
 setval mfilt-LOOPNUMBER.procinfo.cset aolrt
